--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,24 @@
-sudo: false
-language: node_js
-node_js:
-  - 'node'
-  - '6'
-  - '5'
-  - '4'
+language: objective-c
+osx_image: xcode9.4
+branches:
+  only:
+    - master
+env:
+  global:
+  - LC_CTYPE=en_US.UTF-8
+  - LANG=en_US.UTF-8
+  - WORKSPACE=GhostTyping.xcworkspace
+  - IOS_FRAMEWORK_SCHEME="Alamofire iOS"
+  matrix:
+    - DESTINATION="arch=x86_64"                    SCHEME="$IOS_FRAMEWORK_SCHEME"    RUN_TESTS="NO" BUILD_EXAMPLE="NO"  POD_LINT="YES"
+before_install:
+  - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
+script:
+  - set -o pipefail
+  - xcodebuild -version
+  - xcodebuild -showsdks
+  
+  # Run `pod lib lint` if specified
+  - if [ $POD_LINT == "YES" ]; then
+      pod lib lint;
+    fi
