--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
   xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty;
   
   # Run `pod lib lint` if specified
+  - cd GhostTyping;
   - if [ $POD_LINT == "YES" ]; then
-      cd GhostTyping;
       pod lib lint;
     fi
