--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,25 @@ branches:
     - master
 env:
   global:
-    - LC_CTYPE=en_US.UTF-8
-    - LANG=en_US.UTF-8
-    - WORKSPACE=GhostTyping.xcworkspace
-    - IOS_FRAMEWORK_SCHEME="Alamofire iOS"
+  - LC_CTYPE=en_US.UTF-8
+  - LANG=en_US.UTF-8
+  - WORKSPACE=GhostTyping.xcworkspace
+  - IOS_FRAMEWORK_SCHEME="Alamofire iOS"
   matrix:
     - DESTINATION="arch=x86_64"                    SCHEME="$IOS_FRAMEWORK_SCHEME"    RUN_TESTS="NO" BUILD_EXAMPLE="NO"  POD_LINT="YES"
 before_install:
-    - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
+  - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
 script:
-    - set -o pipefail
-    - xcodebuild -version
-    - xcodebuild -showsdks
-    xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty;
-    # Run `pod lib lint` if specified
-    - if [ $POD_LINT == "YES" ]; then
-        pod lib lint;
-      fi
+  - set -o pipefail
+  - xcodebuild -version
+  - xcodebuild -showsdks
+  
+
+  xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty;
+
+  - cd GhostTyping
+  
+  # Run `pod lib lint` if specified
+  - if [ $POD_LINT == "YES" ]; then
+      pod lib lint;
+    fi
