--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ script:
       xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty;
     fi
   
+  - cd GhostTyping
+  
   # Run `pod lib lint` if specified
   - if [ $POD_LINT == "YES" ]; then
       pod lib lint;
