--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,5 @@ script:
   
   # Run `pod lib lint` if specified
   - if [ $POD_LINT == "YES" ]; then
-      pod lib lint;
+      pod lib lint --no-clean --allow-warnings;
     fi
