--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   global:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
-  - WORKSPACE=GhostTyping.xcworkspace
+  - WORKSPACE=GhostType.xcworkspace
   - IOS_FRAMEWORK_SCHEME="Alamofire iOS"
   matrix:
     - DESTINATION="arch=x86_64"                    SCHEME="$IOS_FRAMEWORK_SCHEME"    RUN_TESTS="NO" BUILD_EXAMPLE="NO"  POD_LINT="YES"
@@ -16,7 +16,6 @@ before_install:
 script:
   - set -o pipefail
   - xcodebuild -version
-  - xcodebuild -showsdks
 
    - if [ $RUN_TESTS == "YES" ]; then
       xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty;
