--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
   - WORKSPACE=GhostType.xcworkspace
-  - IOS_FRAMEWORK_SCHEME="Alamofire iOS"
+  - IOS_FRAMEWORK_SCHEME="GhostTyping"
   matrix:
     - DESTINATION="arch=x86_64"                    SCHEME="$IOS_FRAMEWORK_SCHEME"    RUN_TESTS="NO" BUILD_EXAMPLE="NO"  POD_LINT="YES"
 before_install:
