--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,14 @@ script:
   - set -o pipefail
   - xcodebuild -version
   - xcodebuild -showsdks
-  xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty;
+
+  # Build Framework in Debug and Run Tests if specified
+  # - if [ $RUN_TESTS == "YES" ]; then
+  #     xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty;
+  #   else
+        xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty;
+  #   fi
+
   - cd GhostTyping
   
   # Run `pod lib lint` if specified
