--- a/GhostTyping.xcodeproj/xcshareddata/xcschemes/GhostTyping.xcscheme
+++ b/GhostTyping.xcodeproj/xcshareddata/xcschemes/GhostTyping.xcscheme
@@ -29,6 +29,15 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "00B86D6C211969D400E66020"
+            BuildableName = "GhostTypingExample.app"
+            BlueprintName = "GhostTypingExample"
+            ReferencedContainer = "container:Example/GhostTypingExample.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -42,15 +51,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "001246D820EDDE3F00C60799"
-            BuildableName = "GhostTyping.framework"
-            BlueprintName = "GhostTyping"
-            ReferencedContainer = "container:GhostTyping.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
