Update: Fix has no scheme Carthage

--- a/GhostTyping.xcodeproj/xcshareddata/xcschemes/GhostTyping.xcscheme
+++ b/GhostTyping.xcodeproj/xcshareddata/xcschemes/GhostTyping.xcscheme
@@ -51,6 +51,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "001246D820EDDE3F00C60799"
+            BuildableName = "GhostTyping.framework"
+            BlueprintName = "GhostTyping"
+            ReferencedContainer = "container:GhostTyping.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
