--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ DerivedData/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata/
+*.xcworkspace/xcshareddata
 
 ## Other
 *.moved-aside
@@ -38,4 +39,4 @@ playground.xcworkspace
 
 # Carthage
 Carthage/Build
-GhostTyping.xcworkspace/xcshareddata
+
