--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   global:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
-  - WORKSPACE=GhostType.xcworkspace
+  - WORKSPACE=GhostTyping.xcworkspace
   - IOS_FRAMEWORK_SCHEME="GhostTyping"
   matrix:
     - DESTINATION="platform=iOS Simulator,name=iPhone X,OS=11.4"                    SCHEME="$IOS_FRAMEWORK_SCHEME"    RUN_TESTS="NO" BUILD_EXAMPLE="NO"  POD_LINT="YES"
